--- a/index.jade
+++ b/index.jade
@@ -1,18 +1,22 @@
-html(ng-app="myApp")
+html(ng-app="daikonApp")
   head
     link(rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css")
+    link(rel="stylesheet",href="bower_components/angular-bootstrap/ui-bootstrap-csp.css")
+    link(rel="stylesheet",href="bower_components/angular-tablesort/tablesort.css")
+    link(rel="stylesheet",href="main.css")
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/bootstrap/dist/js/bootstrap.js")
     script(src="bower_components/angular/angular.js")
-    script(src="bower_components/angular-bootstrap/ui-bootstrap.js")
+    script(src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js")
+    script(src="bower_components/angular-filter/dist/angular-filter.js")
+    script(src="bower_components/angular-tablesort/js/angular-tablesort.js")
     script(src="bower_components/underscore/underscore.js")
-    script(src="main.js")
+    script(src="scripts/main.js")
 
   body
-    #test(ng-controller="test")
-      table.table.table-hover
-        tr(ng-repeat="d in data")
-          td {{d.name}}
-          td {{d.value}}
-
+    tabset#nav(justified="false")
+      tab#apps(heading="Apps")
+      tab#instances(heading="Instances")
+      tab#servers(heading="Servers")
+    #main(ng-view)
