--- a/templates/servers.jade
+++ b/templates/servers.jade
@@ -3,14 +3,17 @@ table.table.table-hover.table-bordered(ts-wrapper)
     th(ts-criteria="Name",ts-default) Name
     th(ts-criteria="Version.Version") Version
     th(ts-criteria="Containers") Containers
+    th(ts-criteria="NCPU") CPUs
     th(ts-criteria="MemTotal") Memory
     th(ts-criteria="MemoryUsed") Memory Used
     th(ts-criteria="MemoryAllocated") Memory Allocated
     th(ts-criteria="CPUPercent") CPU Usage
   tr(ng-repeat="s in servers", ts-repeat)
-    td {{s.Name}}
+    td
+      a(ng-href="server/{{s.Name}}") {{s.Name}}
     td {{s.Version.Version}}
     td.right {{s.Containers}}
+    td.right {{s.NCPU}}
     td.right {{s.MemTotal | byteFmt:2}}
     td.right {{s.MemoryUsed | byteFmt:2}}
     td.right {{s.MemoryAllocated | byteFmt:2}}
