--- a/templates/instances.jade
+++ b/templates/instances.jade
@@ -1,8 +1,8 @@
 table.table.table-hover.table-bordered(ts-wrapper)
   tr
     th(ts-criteria="id") Id
-    th(ts-criteria="raw.Name",ts-default) Name
-    th(ts-criteria="host") Host
+    th(ts-criteria="raw.Name+host",ts-default) Name
+    th(ts-criteria="host+raw.Name") Host
     th(ts-criteria="raw.Config.Image") Image
     th(ts-criteria="raw.State.StartedAt") Started At
     th(ts-criteria="raw.LastSeen") Last Report
@@ -13,7 +13,7 @@ table.table.table-hover.table-bordered(ts-wrapper)
     td
       a(ng-href="server/{{i.host}}") {{i.host}}
     td {{i.raw.Config.Image}}
-    td(title="{{i.raw.State.StartedAt}}")
+    td(title="{{i.raw.State.StartedAt | amDateFormat:'YYYY-MM-DD HH:mm:ss'}}")
       span(am-time-ago="i.raw.State.StartedAt")
-    td(title="{{i.raw.LastSeen}}")
+    td(title="{{i.raw.LastSeen | amDateFormat:'YYYY-MM-DD HH:mm:ss'}}")
       span(am-time-ago="i.raw.LastSeen")
