--- a/templates/servers.jade
+++ b/templates/servers.jade
@@ -24,5 +24,5 @@ table.table.table-hover.table-bordered(ts-wrapper)
       progressbar.progress-striped(value="s.MemoryUsed | percent:s.MemTotal:true")
         span {{s.MemoryUsed | byteFmt:2}}/{{s.MemTotal | byteFmt:2}}
     td.right {{s.MemoryAllocated | byteFmt:2}}
-    td(title="{{s.SystemTime}}")
+    td(title="{{s.SystemTime | amDateFormat:'YYYY-MM-DD HH:mm:ss'}}")
       span(am-time-ago="s.SystemTime")
