--- a/index.jade
+++ b/index.jade
@@ -13,6 +13,7 @@ html(ng-app="daikonApp",ng-controller="RootCtrl")
     script(src="bower_components/moment/moment.js")
     script(src="bower_components/bootstrap/dist/js/bootstrap.js")
     script(src="bower_components/angular/angular.js")
+    script(src="bower_components/angular-sanitize/angular-sanitize.js")
     script(src="bower_components/angular-route/angular-route.js")
     script(src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js")
     script(src="bower_components/angular-filter/dist/angular-filter.js")
