--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 html(ng-app="daikonApp",ng-controller="RootCtrl")
   head
-    base(href="/daikon/")
+    base(href=config.httpd.base)
     meta(http-equiv="Content-Type" content="text/html;charset=UTF-8")
     link(rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css")
