--- a/public/templates/home.jade
+++ b/public/templates/home.jade
@@ -3,5 +3,5 @@
     .col-md-8
       h1 Hello, Daikon
       p Daikon (大根, literally "big root"), also known by many other names depending on context, is a mild-flavored winter radish (Raphanus sativus) usually characterized by fast-growing leaves and a long white napiform root.
-    img.col-md-4(src="images/daikon.png")
+    img.col-md-4(src="public/images/daikon.png")
     .clearfix
