--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,30 @@ html(ng-app="daikonApp",ng-controller="RootCtrl")
   head
     base(href=config.httpd.base)
     meta(http-equiv="Content-Type" content="text/html;charset=UTF-8")
+
+    meta(name="apple-mobile-web-app-title", content="Daikon UI")
+    meta(name="application-name", content="Daikon UI")
+    meta(name="msapplication-TileColor", content="#2d89ef")
+    meta(name="msapplication-TileImage", content="public/images/mstile-144x144.png")
+    meta(name="msapplication-config", content="public/images/browserconfig.xml")
+    meta(name="theme-color", content="#ffffff")
+    link(rel="apple-touch-icon", sizes="57x57", href="public/images/apple-touch-icon-57x57.png")
+    link(rel="apple-touch-icon", sizes="60x60", href="public/images/apple-touch-icon-60x60.png")
+    link(rel="apple-touch-icon", sizes="72x72", href="public/images/apple-touch-icon-72x72.png")
+    link(rel="apple-touch-icon", sizes="76x76", href="public/images/apple-touch-icon-76x76.png")
+    link(rel="apple-touch-icon", sizes="114x114", href="public/images/apple-touch-icon-114x114.png")
+    link(rel="apple-touch-icon", sizes="120x120", href="public/images/apple-touch-icon-120x120.png")
+    link(rel="apple-touch-icon", sizes="144x144", href="public/images/apple-touch-icon-144x144.png")
+    link(rel="apple-touch-icon", sizes="152x152", href="public/images/apple-touch-icon-152x152.png")
+    link(rel="apple-touch-icon", sizes="180x180", href="public/images/apple-touch-icon-180x180.png")
+    link(rel="icon", type="image/png", href="public/images/favicon-32x32.png", sizes="32x32")
+    link(rel="icon", type="image/png", href="public/images/android-chrome-192x192.png", sizes="192x192")
+    link(rel="icon", type="image/png", href="public/images/favicon-96x96.png", sizes="96x96")
+    link(rel="icon", type="image/png", href="public/images/favicon-16x16.png", sizes="16x16")
+    link(rel="manifest", href="public/images/manifest.json")
+    link(rel="mask-icon", href="public/images/safari-pinned-tab.svg", color="#5bbad5")
+    link(rel="shortcut icon", href="public/images/favicon.ico")
+
     link(rel="stylesheet" href="public/bower_components/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet" href="public/bower_components/bootstrap/dist/css/bootstrap-theme.css")
     link(rel="stylesheet",href="public/bower_components/angular-bootstrap/ui-bootstrap-csp.css")
