--- a/views/index.jade
+++ b/views/index.jade
@@ -49,26 +49,5 @@ html(ng-app="daikonApp",ng-controller="RootCtrl")
     title(ng-bind='title')
 
   body
-    nav.navbar.navbar-default.navbar-fixed-top
-      .container-fluid
-        .navbar-header
-          a.navbar-brand(href="home") Daikon
-        #navbar.navbar-collapse.collapse
-          ul.nav.navbar-nav.navbar-left
-            li
-              a(ng-href="app/list") Apps
-            li
-              a(ng-href="instance/list") Instances
-            li
-              a(ng-href="server/list") Servers
-            li
-              #title.navbar-text >>
-                span(ng-bind='title')
-          ul.nav.navbar-nav.navbar-right
-            li(ng-class="{active:autoReload}")
-              a#autoreload.glyphicon.glyphicon-time(ng-click="toggleAutoReload()")
-                span(ng-if="autoReload" ng-bind="countdown")
-            li
-              a#reload.glyphicon.glyphicon-refresh(ng-click="$emit('reload')")
-
+    ng-include(src="'public/templates/nav.html'")
     #main.container-fluid(ng-view)
