--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,7 @@ html(ng-app="daikonApp",ng-controller="RootCtrl")
     script(src="public/bower_components/angular/angular.js")
     script(src="public/bower_components/angular-sanitize/angular-sanitize.js")
     script(src="public/bower_components/angular-route/angular-route.js")
+    script(src="public/bower_components/angular-resource/angular-resource.js")
     script(src="public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js")
     script(src="public/bower_components/angular-filter/dist/angular-filter.js")
     script(src="public/bower_components/angular-tablesort/js/angular-tablesort.js")
