--- a/views/index.jade
+++ b/views/index.jade
@@ -31,6 +31,7 @@ html(ng-app="DaikonMain",ng-controller="RootCtrl")
     link(rel="stylesheet",href="public/bower_components/angular-tablesort/tablesort.css")
     link(rel="stylesheet",href="public/bower_components/json-formatter/dist/json-formatter.css")
     link(rel="stylesheet",href="public/bower_components/angular-loading-bar/build/loading-bar.css")
+    link(rel="stylesheet",href="public/bower_components/isteven-angular-multiselect/isteven-multi-select.css")
     link(rel="stylesheet",href="public/main.css")
     script(src="public/bower_components/jquery/dist/jquery.js")
     script(src="public/bower_components/underscore/underscore.js")
@@ -47,6 +48,7 @@ html(ng-app="DaikonMain",ng-controller="RootCtrl")
     script(src="public/bower_components/json-formatter/dist/json-formatter.js")
     script(src="public/bower_components/angular-moment/angular-moment.js")
     script(src="public/bower_components/angular-loading-bar/build/loading-bar.js")
+    script(src="public/bower_components/isteven-angular-multiselect/isteven-multi-select.js")
     script(src="public/scripts/main.js")
     script(src="public/scripts/resources.js")
     script(src="public/scripts/controllers.js")
