update script reference

--- a/views/index.jade
+++ b/views/index.jade
@@ -49,9 +49,7 @@ html(ng-app="DaikonMain",ng-controller="RootCtrl")
     script(src="public/bower_components/angular-moment/angular-moment.js")
     script(src="public/bower_components/angular-loading-bar/build/loading-bar.js")
     script(src="public/bower_components/isteven-angular-multiselect/isteven-multi-select.js")
-    script(src="public/scripts/main.js")
-    script(src="public/scripts/resources.js")
-    script(src="public/scripts/controllers.js")
+    script(src="public/app.js")
     title(ng-bind='title')
 
   body
