split controllers into own files

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-html(ng-app="DaikonMain",ng-controller="RootCtrl")
+html(ng-app="daikon",ng-controller="RootCtrl")
   head
     base(href=config.httpd.base)
     meta(http-equiv="Content-Type" content="text/html;charset=UTF-8")
