appEditor: load auto complete data in directive controller

--- a/public/templates/app-create.jade
+++ b/public/templates/app-create.jade
@@ -1,5 +1,5 @@
 form.form-horizontal(name="form")
-  app-editor(ng-model="data" apps="apps" envs="envs" templates="templates" servers="servers")
+  app-editor(ng-model="data")
   .form-group
     .col-sm-offset-2.col-sm-10
       button.btn.btn-primary(ng-disabled="form.$invalid") Save
