--- a/public/templates/app-editor.jade
+++ b/public/templates/app-editor.jade
@@ -1,39 +1,35 @@
-.col-md-8(ng-form="form" ng-if="!loading")
-  .form-group
-    label.control-label.col-sm-2 Env:
-    .col-sm-10
-      input.form-control(type="text" typeahead="e for e in envs | filter:$viewValue " ng-model="data.env" required placeholder="Namespace")
-  .form-group
-    label.control-label.col-sm-2 App:
-    .col-sm-10
-      input.form-control(type="text" typeahead="a for a in apps | filter:$viewValue " ng-model="data.app" required placeholder="Application")
-  .form-group
-    label.control-label.col-sm-2 Template:
-    .col-sm-10
-      select.form-control(ng-options="a.name as a.name for a in templates" ng-model="data.template" required)
-  .form-group
-    label.control-label.col-sm-2 Servers:
-    .col-sm-10
-      select-server(data="servers" ng-model="data.options.hosts" required)
-
-  .form-group
-    .col-sm-offset-2.col-sm-10
-      button.btn.btn-default(ng-click="showAdvOpts = !showAdvOpts" ng-class="{'active':showAdvOpts}")
-        span.glyphicon(ng-class="{'glyphicon-minus': showAdvOpts, 'glyphicon-plus': !showAdvOpts}")
-        span &nbsp;Advanced options
-
-  div(collapse="!showAdvOpts")
+.col-md-8(wait-for-loading loading="isLoading")
+  ng-form(name="form")
     .form-group
-      label.control-label.col-sm-2 Override image:
+      label.control-label.col-sm-2 Env:
       .col-sm-10
-        .input-group
-          span.input-group-addon
-            input(type="checkbox" ng-model="overrideImage")
-          input.form-control(type="text" ng-model="customImage" placeholder="Image" ng-readonly="!overrideImage" required)
+        input.form-control(type="text" typeahead="e for e in envs | filter:$viewValue " ng-model="data.env" required placeholder="Namespace")
+    .form-group
+      label.control-label.col-sm-2 App:
+      .col-sm-10
+        input.form-control(type="text" typeahead="a for a in apps | filter:$viewValue " ng-model="data.app" required placeholder="Application")
+    .form-group
+      label.control-label.col-sm-2 Template:
+      .col-sm-10
+        select.form-control(ng-options="a.name as a.name for a in templates" ng-model="data.template" required)
+    .form-group
+      label.control-label.col-sm-2 Servers:
+      .col-sm-10
+        select-server(data="servers" ng-model="data.options.hosts" required)
 
-.col-sm-8(ng-if="loading")
-  h1.text-center
-    span.glyphicon.glyphicon-time
-    | Loading...
+    .form-group
+      .col-sm-offset-2.col-sm-10
+        button.btn.btn-default(ng-click="showAdvOpts = !showAdvOpts" ng-class="{'active':showAdvOpts}")
+          span.glyphicon(ng-class="{'glyphicon-minus': showAdvOpts, 'glyphicon-plus': !showAdvOpts}")
+          span &nbsp;Advanced options
+
+    div(collapse="!showAdvOpts")
+      .form-group
+        label.control-label.col-sm-2 Override image:
+        .col-sm-10
+          .input-group
+            span.input-group-addon
+              input(type="checkbox" ng-model="overrideImage")
+            input.form-control(type="text" ng-model="customImage" placeholder="Image" ng-readonly="!overrideImage" required)
 
 pre.col-md-4 {{data|json}}
