--- a/public/templates/app-create.jade
+++ b/public/templates/app-create.jade
@@ -2,5 +2,5 @@ form.form-horizontal(name="form")
   app-editor(ng-model="data")
   .form-group
     .col-sm-offset-2.col-sm-10
-      button.btn.btn-primary(ng-disabled="form.$invalid") Save
+      button.btn.btn-primary(ng-disabled="form.$invalid" ng-click="save()") Save
 
