--- a/public/templates/app-info.jade
+++ b/public/templates/app-info.jade
@@ -1,12 +1,15 @@
 accordion#app-info.row(close-others="false")
   .row.table-row
-    #genernal.col-md-12.table-grid
+    #config.col-md-12.table-grid
       accordion-group(heading="Config",panel-class="panel-primary",is-open="true")
         form.form-horizontal(name="form" ng-if="config")
           app-editor(ng-model="config")
+          .form-group
+            .col-sm-offset-2.col-sm-10
+              button.btn.btn-primary(ng-disabled="form.$invalid" ng-click="saveApp()") Save
 
   .row.table-row
-    #raw.col-md-12.table-grid
+    #instances.col-md-12.table-grid
       accordion-group(heading="Instance",is-open="true")
         table.table.table-hover.table-bordered(ts-wrapper)
           tr
@@ -21,3 +24,18 @@ accordion#app-info.row(close-others="false")
               a(ng-href="instance/{{d.id}}") {{d.instance}}
             td
               a(ng-href="server/{{d.node}}") {{d.node}}
+
+  .row.table-row
+    #actions.col-md-12.table-grid
+      accordion-group(heading="Actions",is-open="true")
+        p
+          button.btn.btn-lg.btn-primary(type="button" disabled)
+            span.glyphicon.glyphicon-play
+            | Deploy
+          button.btn.btn-lg.btn-danger(type="button" ng-click="deleteApp()")
+            span.glyphicon.glyphicon-remove
+            | Delete
+          //button.btn.btn-default.btn-lg(type="button") Start
+          //button.btn.btn-default.btn-lg(type="button") Stop
+          //button.btn.btn-default.btn-lg(type="button") Restart
+
