remove "wait-for-loading" directive

--- a/public/templates/app-editor.jade
+++ b/public/templates/app-editor.jade
@@ -1,4 +1,4 @@
-.col-md-8(wait-for-loading loading="isLoading")
+.col-md-8
   ng-form(name="form")
     .form-group
       label.control-label.col-sm-2 Env:
