app-info: add reset button

--- a/public/templates/app-info.jade
+++ b/public/templates/app-info.jade
@@ -6,7 +6,12 @@ accordion#app-info.row(close-others="false")
           app-editor(ng-model="config" update-mode="true")
           .form-group
             .col-sm-offset-2.col-sm-10
-              button.btn.btn-primary(ng-disabled="form.$invalid" ng-click="saveApp()") Save
+              button.btn.btn-warning(ng-click="resetConfig()")
+                span.glyphicon.glyphicon-repeat
+                | Reset
+              button.btn.btn-primary(ng-disabled="form.$invalid" ng-click="saveApp()")
+                span.glyphicon.glyphicon-floppy-disk
+                | Save
 
   .row.table-row
     #instances.col-md-12.table-grid
