--- a/views/index.jade
+++ b/views/index.jade
@@ -32,6 +32,7 @@ html(ng-app="daikon",ng-controller="RootCtrl")
     link(rel="stylesheet",href="public/bower_components/json-formatter/dist/json-formatter.css")
     link(rel="stylesheet",href="public/bower_components/angular-loading-bar/build/loading-bar.css")
     link(rel="stylesheet",href="public/bower_components/isteven-angular-multiselect/isteven-multi-select.css")
+    link(rel="stylesheet",href="public/bower_components/angular-ui-grid/ui-grid.min.css")
     link(rel="stylesheet",href="public/main.css")
     script(src="public/bower_components/jquery/dist/jquery.js")
     script(src="public/bower_components/underscore/underscore.js")
@@ -49,6 +50,7 @@ html(ng-app="daikon",ng-controller="RootCtrl")
     script(src="public/bower_components/angular-moment/angular-moment.js")
     script(src="public/bower_components/angular-loading-bar/build/loading-bar.js")
     script(src="public/bower_components/isteven-angular-multiselect/isteven-multi-select.js")
+    script(src="public/bower_components/angular-ui-grid/ui-grid.min.js")
     script(src="public/app.js")
     title(ng-bind='title')
 
